--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Wedding Invite</title>
   </head>
-  <body></body>
+  <body>
+    <section class="header-section">
+      <h1>Тут заголовок приглашения</h1>
+      <div class="names">Аким & Настя</div>
+      <div class="photo-1"></div>
+      <div class="photo-2"></div>
+      <div class="photo-3"></div>
+      <div class="photo-4"></div>
+    </section>
+    <section></section>
+    <section></section>
+    <section></section>
+  </body>
 </html>
