feat: info block

--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
       <div class="photo-3"></div>
       <div class="photo-4"></div>
     </section>
-    <section></section>
+    <section class="info">
+      <div class="block">
+        <img src="./icons/icons8-место-100.png" />
+        <h3>Место</h3>
+        <p>г. Пинск</p>
+        <p>ул. Трезвая 26</p>
+      </div>
+      <div class="block">
+        <img src="./icons/icons8-дата-100.png" />
+        <h3>Дата</h3>
+        <p>23 июня</p>
+        <p>Воскресенье</p>
+      </div>
+      <div class="block">
+        <img src="./icons/icons8-часы-128.png" width="100" height="100" />
+        <h3>Время</h3>
+        <p>Начало в 14:00</p>
+        <p>Закончим в 13:59</p>
+      </div>
+    </section>
     <section></section>
     <section></section>
   </body>
