feat: add schedule

--- a/index.html
+++ b/index.html
@@ -35,7 +35,27 @@
         <p>Закончим в 13:59</p>
       </div>
     </section>
-    <section></section>
+    <section class="schedule">
+      <div class="timeline">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+      <div class="time-info">
+        <div class="block">
+          <h3>14:00-15:00</h3>
+          <p>Торжественная часть</p>
+        </div>
+        <div class="block">
+          <h3>15:00-18:00</h3>
+          <p>Пьем</p>
+        </div>
+        <div class="block">
+          <h3>18:00-23:00</h3>
+          <p>Допиваем</p>
+        </div>
+      </div>
+    </section>
     <section></section>
   </body>
 </html>
