feat: dress-code

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
         </div>
       </div>
     </section>
+    <section class="dress-code">
+      <h2>Дресс-код</h2>
+      <div class="dress-info">Сериал "Острые козырьки"</div>
+      <div class="dress-photo-1"></div>
+      <div class="dress-photo-2"></div>
+    </section>
     <section></section>
   </body>
 </html>
