feat: add calendar

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <p>Допиваем</p>
         </div>
       </div>
+      <div class="calendar">
+        <div class="heart"></div>
+      </div>
     </section>
     <section class="dress-code">
       <h2>Дресс-код</h2>
