feat: add last block

--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
       <div class="dress-photo-1"></div>
       <div class="dress-photo-2"></div>
     </section>
-    <section></section>
+    <section class="last-word"><h3>Будем очень ждать Вас!</h3></section>
   </body>
 </html>
