fix: photos and adaptive

--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
   </head>
   <body>
     <section class="header-section">
-      <h1>Тут заголовок приглашения</h1>
-      <div class="names">Аким & Настя</div>
-      <div class="photo-1"></div>
-      <div class="photo-2"></div>
-      <div class="photo-3"></div>
-      <div class="photo-4"></div>
+      <div class="left-photo">
+        <div class="photo-1"></div>
+        <div class="photo-2"></div>
+      </div>
+      <div class="header-info">
+        <h1>Приглашение!</h1>
+        <div class="names">Аким & Настя</div>
+        <div class="text">
+          Пишут вам Аким и Настя. Мы рады сообщить Вам прекрасную новость — мы
+          женимся! И приглашаем Вас разделить с нами этот прекрасный день❤️
+        </div>
+      </div>
+      <div class="right-photo">
+        <div class="photo-3"></div>
+        <div class="photo-4"></div>
+      </div>
     </section>
     <section class="info">
       <div class="block">
@@ -61,10 +71,12 @@
       </div>
     </section>
     <section class="dress-code">
-      <h2>Дресс-код</h2>
+      <h2>
+        Дресс-код
+        <div class="dress-photo-1"></div>
+        <div class="dress-photo-2"></div>
+      </h2>
       <div class="dress-info">Сериал "Острые козырьки"</div>
-      <div class="dress-photo-1"></div>
-      <div class="dress-photo-2"></div>
     </section>
     <section class="last-word"><h3>Будем очень ждать Вас!</h3></section>
   </body>
