--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       </div>
     </section>
     <section class="info">
-      <div class="block">
+      <div class="block" id="location">
         <img src="./icons/icons8-место-100.png" />
         <h3>Место</h3>
         <p>г. Пинск</p>
-        <p>ул. Трезвая 26</p>
+        <p>Агроусадьба "Орешек"</p>
       </div>
       <div class="block">
         <img src="./icons/icons8-дата-100.png" />
@@ -80,4 +80,5 @@
     </section>
     <section class="last-word"><h3>Будем очень ждать Вас!</h3></section>
   </body>
+  <script src="./script.js"></script>
 </html>
