feat: add timer

--- a/index.html
+++ b/index.html
@@ -5,25 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./fonts.css" />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./отсчет.css" />
     <title>Wedding Invite</title>
   </head>
   <body>
     <section class="header-section">
-      <div class="left-photo">
-        <div class="photo-1"></div>
-        <div class="photo-2"></div>
-      </div>
-      <div class="header-info">
-        <h1>Приглашение!</h1>
-        <div class="names">Аким & Настя</div>
-        <div class="text">
-          Пишут вам Аким и Настя. Мы рады сообщить Вам прекрасную новость — мы
-          женимся! И приглашаем Вас разделить с нами этот прекрасный день❤️
+      <div class="header-main">
+        <div class="left-photo">
+          <div class="photo-1"></div>
+          <div class="photo-2"></div>
+        </div>
+        <div class="header-info">
+          <h1>Приглашение!</h1>
+          <div class="names">Аким & Настя</div>
+          <div class="text">
+            Пишут вам Аким и Настя. Мы рады сообщить Вам прекрасную новость — мы
+            женимся! И приглашаем Вас разделить с нами этот прекрасный день❤️
+          </div>
+        </div>
+        <div class="right-photo">
+          <div class="photo-3"></div>
+          <div class="photo-4"></div>
         </div>
       </div>
-      <div class="right-photo">
-        <div class="photo-3"></div>
-        <div class="photo-4"></div>
+      <div class="countdown">
+        <div class="countdown-item">
+          <span id="days">L</span>
+          <span class="label">Дней</span>
+        </div>
+        <div class="countdown-item">
+          <span id="hours">O</span>
+          <span class="label">Часов</span>
+        </div>
+        <div class="countdown-item">
+          <span id="minutes">A</span>
+          <span class="label">Минут</span>
+        </div>
+        <div class="countdown-item">
+          <span id="seconds">D</span>
+          <span class="label">Секунд</span>
+        </div>
       </div>
     </section>
     <section class="info">
