--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       <div class="block">
         <img src="./icons/icons8-часы-128.png" width="100" height="100" />
         <h3>Время</h3>
-        <p>Начало в 14:00</p>
-        <p>Закончим в 13:59</p>
+        <p>Начало в 15:30</p>
+        <p>Конец в 23:00</p>
       </div>
     </section>
     <section class="schedule">
@@ -72,19 +72,29 @@
         <div class="circle"></div>
         <div class="circle"></div>
         <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
       </div>
       <div class="time-info">
         <div class="block">
-          <h3>14:00-15:00</h3>
+          <h3>15:30-16:00</h3>
+          <p>Сбор гостей</p>
+        </div>
+        <div class="block">
+          <h3>16:00-16:30</h3>
           <p>Торжественная часть</p>
         </div>
         <div class="block">
-          <h3>15:00-18:00</h3>
-          <p>Пьем</p>
+          <h3>16:30-17:30</h3>
+          <p>Банкет</p>
+        </div>
+        <div class="block">
+          <h3>17:30-18:00</h3>
+          <p>Конкурсы</p>
         </div>
         <div class="block">
           <h3>18:00-23:00</h3>
-          <p>Допиваем</p>
+          <p>Продолжение банкета</p>
         </div>
       </div>
       <div class="calendar">
