--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
         </div>
         <div class="block">
           <h3>15:00-15:30</h3>
-          <p>Торжественная часть</p>
+          <p>Начало регистрации</p>
         </div>
         <div class="block">
-          <h3>15:30-17:30</h3>
+          <h3>15:30-16:00</h3>
+          <p>Поздравления</p>
+        </div>
+        <div class="block">
+          <h3>16:00-23:00</h3>
           <p>Банкет</p>
         </div>
         <div class="block">
-          <h3>17:30-18:00</h3>
-          <p>Конкурсы</p>
-        </div>
-        <div class="block">
-          <h3>18:00-23:00</h3>
-          <p>Продолжение банкета</p>
+          <h3>23:00</h3>
+          <p>Конец</p>
         </div>
       </div>
       <div class="calendar">
